feat(DNA): add stable nodes API
